// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TranslatorInfo Component > should render description and divider when description prop is provided 1`] = `
.emotion-1 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 300;
  font-size: 4.285714285714286rem;
}

.emotion-2 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  font-size: 1.5rem;
  line-height: 1.5;
  font-weight: 400;
  color: #1D263B;
}

.emotion-3 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
  margin-top: 32px;
  margin-bottom: 32px;
}

.emotion-4 {
  margin: 0;
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1.1428571428571428rem;
  line-height: 1.5;
  margin-top: 16px;
}

<div>
  <div
    class="MuiBox-root emotion-0"
  >
    <h1
      class="MuiTypography-root MuiTypography-h2 emotion-1"
    >
      John Smith
    </h1>
    <h2
      class="MuiTypography-root MuiTypography-h3 emotion-2"
    >
      Translator
    </h2>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth emotion-3"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 emotion-4"
    >
      John is an experienced translator from German.
    </p>
  </div>
</div>
`;

exports[`TranslatorInfo Component > should render full name and role label correctly 1`] = `
.emotion-1 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 300;
  font-size: 4.285714285714286rem;
}

.emotion-2 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  font-size: 1.5rem;
  line-height: 1.5;
  font-weight: 400;
  color: #1D263B;
}

.emotion-3 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
  margin-top: 32px;
  margin-bottom: 32px;
}

.emotion-4 {
  margin: 0;
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1.1428571428571428rem;
  line-height: 1.5;
  margin-top: 16px;
}

<div>
  <div
    class="MuiBox-root emotion-0"
  >
    <h1
      class="MuiTypography-root MuiTypography-h2 emotion-1"
    >
      Jane Doe
    </h1>
    <h2
      class="MuiTypography-root MuiTypography-h3 emotion-2"
    >
      Translator
    </h2>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth emotion-3"
    />
    <p
      class="MuiTypography-root MuiTypography-body1 emotion-4"
    >
      Lorem ipsum
    </p>
  </div>
</div>
`;
